# zcu_fav_kiv_cs

./: README.md
bachelor/MIPS-string-formatting/: README.md  ukol1.circ  ukol2.s
bachelor/bit_semestral/: aes  aes.c  aes.h  main.c  makefile
bachelor/bit_semestral/doc/: documentation.tex
bachelor/bit_semestral/res/: message.txt  pokus.txt
bachelor/c_sem/: README.md
bachelor/c_sem/c_semestralka/: documentation.tex  generation.c  generation.h  main.c  makefile  makefile.win  specimen.c  specimen.h
bachelor/c_semestral/: Makefile.win  README.md  makefile
bachelor/c_semestral/doc/: Dokumentace.tex
bachelor/c_semestral/src/: constants.h  constants.h.gch  file_loader.c  file_loader.h  file_loader.h.gch  functions.c  functions.h  functions.h.gch  main.c  structures.c  structures.h  structures.h.gch
bachelor/c_semestral/time_tests/: ntb_linux.txt  ntb_win.txt  pi.txt
bachelor/mbkz_semestral/: settings.gradle
bachelor/mbkz_semestral/app/: build.gradle
bachelor/mbkz_semestral/doc/: uur_doc.tex
bachelor/pt_semestralka/: README.txt  dokumentace.tex
bachelor/pt_semestralka/dokumentace/: ptdoc.tex
bachelor/pt_semestralka/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  index.html  (+5 more)
bachelor/uir_semestral/: main.py  soubor_klas_trid.txt
bachelor/upg_semestral/: Build.cmd  Makedoc.cmd  Run.cmd  build.sh  makedoc.sh  run.sh
master/dbm2_semestral/: README.md
master/dce-task-1/: README.md  inventory.tmpl  terraform.tf  terraform.tfvars
master/fjp_semestral/: .gitignore  README.md
master/ir_semestral/: .gitignore  README.md  log4j2.xml  pom.xml
master/os_semestral/: README.md  gdb_to_qemu.sh  just_qemu.sh  run_qemu.sh
master/os_semestral/sources/userspace/: CMakeLists.txt
master/os_semestral/sources/userspace/glucose_prediction_task/: main.cpp
master/os_semestral/sources/userspace/glucose_prediction_task/include/: chromosome.h  constants.h  general.h  generation.h  q_sort.h
master/os_semestral/sources/userspace/glucose_prediction_task/sources/: chromosome.cpp  general.cpp  generation.cpp
master/os_semestral/task_x86/: CMakeLists.txt  main.cpp
master/os_semestral/task_x86/include/: chromosome.h  generation.h  q_sort.h
master/os_semestral/task_x86/sources/: chromosome.cpp  generation.cpp
master/pia_project/: CHECKLIST.md  README.md  docker-compose.yaml
(+1262 files in other folders)
